--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.0.8",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-image-picker": "~8.0.1",
     "formik": "^2.1.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -18,8 +20,7 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.2.0",
-    "react-native-web": "~0.11.7",
-    "expo-image-picker": "~8.0.1"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
