--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^5.1.1",
-    "@react-navigation/native": "^5.0.8",
+    "@react-navigation/native": "^5.0.9",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-image-picker": "~8.0.1",
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.2.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
