--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-navigation/native": "^5.0.8",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "js-base64": "^2.5.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
